--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,53 @@
-.red-border {
-  border-color: red;
+/* App.css */
+body,
+html {
+  background-color: #121212; /* Dark background */
+  color: #ffffff; /* Light text */
+}
+
+/* Default form input and select styling */
+.form-control {
+  background-color: #333333 !important;
+  border: 1px solid #555555 !important;
+  color: #ffffff !important;
+}
+
+.form-label {
+  color: #ffffff;
+}
+
+/* Button styling */
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+/* Table styling for dark mode */
+.table {
+  color: #ffffff !important;
+}
+
+.table-dark {
+  background-color: #343a40 !important;
+  color: #ffffff !important;
+}
+
+.table-dark th,
+.table-dark td,
+.table-dark thead th {
+  border-color: #454d55 !important;
+}
+
+/* React DatePicker styling adjustments for dark mode */
+.react-datepicker-wrapper,
+.react-datepicker__input-container,
+.react-datepicker__input-container input {
+  background-color: #333333;
+  color: #ffffff;
+  border-color: #555555;
+}
+.input-container {
+  background-color: #333333;
+  color: #ffffff;
+  border-color: #555555;
 }
