--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-/* App.css */
+/* Chen Moasis 318912805
+Ariel Shirkani 207267824 */
 body,
 html {
   background-color: #121212; /* Dark background */
