--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* Chen Moasis 318912805
+Ariel Shirkani 207267824 */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
